--- a/index.css
+++ b/index.css
@@ -127,6 +127,8 @@ li a.active, li a:hover{
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr;
+    position: relative;
+    width: 100%;
 }
 
 .img_footer{
@@ -167,20 +169,18 @@ button{
 #main_login{
     text-align: center;
     background-color: #69113E;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-bottom: 10px;
-    padding: 60px;
-    margin-left: 450px;
-    margin-right: 450px;
-    height: 100%;
+    padding: 40px;
+    margin-left: 550px;
+    margin-right: 550px;
+    height: 30%;
 }
 
 #img_login{
-    border: 6px outset #353535;
-    border-radius: 10px;
-    margin-bottom: 10px;
     display:block;
     margin:auto;
+    margin-top: 75px;
 }
 
 .btn_user {
@@ -189,6 +189,7 @@ button{
     padding: 8px 20px 10px 20px;
     text-decoration: none;
     color: white;
+    
 }
 
 .btn_pass {
@@ -206,8 +207,20 @@ button{
     padding: 8px 20px 10px 20px;
     text-decoration: none;
     color: white;
+    margin-bottom: 20px;
     
 }
 .icon_login {
     padding-top: 1rem;
+}
+
+.main_admin{
+    background-color: #8C2F5E;
+    width: 100%;
+    height: 500px;
+}
+
+.iconos{
+    margin-left: 10px;
+    margin-right: 15px;
 }
