--- a/admin_style.css
+++ b/admin_style.css
@@ -19,7 +19,7 @@ body {
   .title {
     color: #eee;
     font-family: sans-serif;
-    font-size: 36px;
+    font-size: 50px;
     font-weight: 600;
     margin-top: 30px;
     text-align: center;
@@ -118,8 +118,8 @@ body {
     box-sizing: border-box;
     color: #eee;
     cursor: pointer;
-    font-size: 18px;
-    height: 50px;
+    font-size: 24px;
+    height: 150px;
     margin-top: 38px;
     text-align: center;
     width: 100%;
@@ -140,6 +140,19 @@ body {
     height: 30px;
     margin-top: 10px;
     text-align: center;
-    width: 20%;
+    width: 30%;
   }
   
+  .title_form {
+    width: 100%;
+    padding-left: 80%;
+  }
+
+  .container {
+    column-count: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 25px;
+    grid-row-gap: 20px;
+  }
